cmake_minimum_required(VERSION 3.22.1)
project(cpp_labs)
set(CMAKE_CXX_STANDARD 20)
add_compile_options(-Wall -g)
add_subdirectory(lab_1)
add_subdirectory(lab_2)
add_subdirectory(lab_3)
add_subdirectory(lab_4)
add_subdirectory(lab_5)
add_subdirectory(lab_6)
add_subdirectory(lab_7)
add_subdirectory(lab_8)
add_subdirectory(lab_9)
add_subdirectory(lab_10)

